# symposium

./: .gitignore  AGENTS.md  Cargo.toml  justfile  pyproject.toml  symposium-artifacts.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-book.yml  release-binaries.yml
agent-plugins/claude-code/hooks/: hooks.json
agent-plugins/claude-code/scripts/: symposium.sh
application/osx/: Package.swift
benchmark-output/: serde_from_value_expected.txt  serde_from_value_prompt.txt  serde_from_value_response.txt  serde_from_value_validation.txt
ci/: Cargo.toml  build-claude-code-plugin.sh  generate-skill.sh
ci/src/: main.rs
mcp-server/src/: ipc.rs  lib.rs
md/: SUMMARY.md  about.md  adding-plugin.md  book.toml  configuration.md  defining-skills.md  install-other.md  install.md  introduction.md  tutorial.md  usage-patterns.md
md-rfd-preprocessor/: Cargo.toml
md/crate-authors/: creating-a-plugin.md  publishing-hooks.md  publishing-skills.md  supporting-your-crate.md
md/design/: common-issues.md  components.md  current-status.md  fiedler-conductor.md  implementation-overview.md  mods.md  overview.md  run-mode.md
md/design/vscode-extension/: architecture.md  extensions.md  implementation-status.md  lm-provider.md  lm-tool-bridging.md  mods.md  packaging.md
md/reference/: configuration.md  plugin-definition.md  skill-definition.md  skill-matching.md
md/rfds/draft/: proxying-acp.md  symposium-component-protocol.md
md/using/: configuration.md
md/work-in-progress/: centered-panel-implementation-plan.md  tiled-windows.md
outdated/md/: SUMMARY.md
setup/: Cargo.toml
setup/src/: acp.rs  main.rs  vscode.rs  zed.rs
skills/symposium/: SKILL.md
socratic-shell/mcp-server/: Cargo.toml
socratic-shell/mcp-server/src/: ipc.rs  lib.rs  server.rs
src/: advice_for.rs  cargo_cmd.rs  config.rs  dispatch.rs  git_source.rs  hook.rs  hook_schema.rs  lib.rs  main.rs  mcp.rs  plugins.rs  predicate.rs  session_state.rs  skills.rs  tutorial.rs  workspace.rs
src/cli-agent-util/: Cargo.toml
src/cli-agent-util/src/: lib.rs
src/crate_sources/: cache.rs  extraction.rs  list.rs  mod.rs
src/sacp-tee/src/: lib.rs
src/symposium-acp/: Cargo.toml
src/symposium-acp-agent/: CHANGELOG.md  Cargo.toml  README.md
src/symposium-acp-agent/examples/: vscodelm_cli.rs
src/symposium-acp-agent/src/: builtin_recommendations.toml  config.rs  main.rs  recommendations.rs  registry.rs  remote_recommendations.rs  symposium.rs  user_config.rs  vscodelm.rs
src/symposium-acp-agent/tests/: mcp_servers.rs  vscodelm_mcp_bridging.rs
src/symposium-acp-proxy/: CHANGELOG.md  Cargo.toml  README.md
src/symposium-acp-proxy/src/: lib.rs  main.rs
src/symposium-acp/src/: lib.rs  main.rs
src/symposium-benchmark/: Cargo.toml
src/symposium-benchmark/src/: main.rs
src/symposium-crate-sources-proxy/: Cargo.toml  README.md
src/symposium-editor-context/: Cargo.toml
src/symposium-editor-context/src/: lib.rs  main.rs
src/symposium-ferris/: CHANGELOG.md  Cargo.toml
src/symposium-math/: Cargo.toml
src/symposium-recommendations/: Cargo.toml
symposium-artifacts/: Cargo.toml
symposium-artifacts/src/: lib.rs  main.rs
symposium-testlib/: Cargo.toml
symposium-testlib/src/: lib.rs
symposium/conductor/: Cargo.toml
symposium/mcp-server/: Cargo.toml
symposium/scp/: Cargo.toml  README.md
symposium/sparkle-acp-proxy/: Cargo.toml
tests/: hook_activation.rs  hook_nudge.rs  integration.rs
tests/testlib/: mod.rs
theme/: custom.css
vscode-extension/: .gitignore  .vscode-test.mjs  .vscodeignore  package-lock.json  package.json  webpack.config.js
vscode-extension/src/: acpAgentActor.ts  agentActionTool.ts  agentConfiguration.ts  agentRegistry.ts  chatViewProvider.ts  editorState.ts  extension.ts  extensionRegistry.ts  languageModelProvider.ts  settingsViewProvider.ts  symposium-webview.ts  toadPanelProvider.ts
zed-extension/prod/: README.md  extension.toml
(+121 files in other folders)
