[workspace]
members = [
    "setup",
    "md-rfd-preprocessor",
    "ci",
    "src/symposium-acp",
    "src/symposium-crate-sources-proxy",
    "src/symposium-math",
    "src/cli-agent-util",
    "src/symposium-benchmark",
]
resolver = "2"

[workspace.dependencies]
sacp = { git = "https://github.com/nikomatsakis/symposium-acp" }
sacp-proxy = { git = "https://github.com/nikomatsakis/symposium-acp" }
sacp-tokio = { git = "https://github.com/nikomatsakis/symposium-acp" }
sacp-conductor = { git = "https://github.com/nikomatsakis/symposium-acp" }
sacp-rmcp = { git = "https://github.com/nikomatsakis/symposium-acp" }
sacp-tee = { git = "https://github.com/nikomatsakis/symposium-acp" }
jsonrpcmsg = "0.1.2"

# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["derive"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP SDK
rmcp = { version = "0.8", features = ["server", "transport-io", "schemars"] }

# Sparkle integration
sparkle = { package = "sparkle-mcp", version = "0.1.4" }

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Setup tool dependencies
which = "6.0"
home = "0.5"
fxhash = "0.2.1"
