[workspace]
members = [
    "setup",
    "md-rfd-preprocessor",
    "ci",
    "src/symposium-acp-agent",
    "src/symposium-ferris",
    "src/symposium-math",
    "src/symposium-recommendations",
    "src/cli-agent-util",
    "src/symposium-benchmark",
]
resolver = "2"

[workspace.dependencies]
sacp = "11.0"
sacp-tokio = "11.0"
sacp-conductor = "11.0"
sacp-rmcp = "11.0"
yopo = "11.0"
elizacp = "12.0"
jsonrpcmsg = "0.1.2"

# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["derive"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP SDK
rmcp = { version = "1.2", features = ["server", "transport-io", "schemars"] }

# Sparkle integration
sparkle = { package = "sparkle-mcp", version = "0.5.0" }

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Setup tool dependencies
which = "6.0"
home = "0.5"
fxhash = "0.2.1"

# Testing
expect-test = "1.5"
