[package]
name = "symposium-testlib"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Integration test harness for Symposium"
repository = "https://github.com/symposium-dev/symposium"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
symposium = { path = ".." }
tempfile = "3.6"
